fix inventory alignment

--- a/css/inventory.css
+++ b/css/inventory.css
@@ -94,6 +94,7 @@
     margin-left:auto;
     width:250px;
     padding:5px;
+    text-align:left;
 }
 
 .inventory-description-body{
